# dispatch

./: .gitignore  CLAUDE.md  README.md  agents.md
Docs/: 01_schema.sql  (+23 more)
backend/: .env.example  Makefile  README_DEV.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/apps/api/: deps.py  exception_handlers.py  lifespan.py  main.py  middleware.py
backend/apps/api/routers/: __init__.py  analytics.py  auth.py  campaigns.py  contacts.py  domains.py  health.py  imports.py  lists.py  segments.py  sender_profiles.py  suppression.py  templates.py  unsubscribe.py  users.py
backend/apps/scheduler/: beat.py
backend/apps/webhook/: handlers.py  main.py  schemas.py  sns_verify.py
backend/apps/workers/: celery_app.py  circuit_breaker_tasks.py  domain_tasks.py  event_tasks.py  import_tasks.py  metrics_tasks.py  queues.py  send_tasks.py  warmup_tasks.py
backend/infra/: Dockerfile.api
backend/libs/core/: config.py  errors.py  logging.py
backend/libs/dns_provisioner/: __init__.py  base.py  cloudflare.py  route53.py
backend/libs/ses_client/: __init__.py  client.py  errors.py  metrics.py  retries.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0001_initial_schema.sql  0002_auth_sessions_and_api_key_last4.py  0003_sprint03_identity_infrastructure.py  0004_sprint04_contacts_email_lower_index.py  0005_sprint09_message_status_guard.py  0006_sprint12_domain_rate_limit.py  0007_sprint13_message_paused_status.py  0008_sprint14_domain_provisioning_status.py  0009_sprint15_warmup_and_postmaster.py
backend/scripts/dev/: seed_local_data.py
backend/scripts/ops/: provision_domains.py
backend/tests/: conftest.py
backend/tests/fixtures/: ses_fake.py
backend/tests/unit/: test_api_health.py  test_lifespan.py  test_webhook_health.py  test_worker_scheduler.py
(+454 files in other folders)
